src/objects/Mentor_Tracking_Report_Record__c.object
<CustomObject>
    <description>An object to store flat record data to provide a means of generating the required Mentor Tracking report / export data in a Salesforce report.</description>
    <fields>
        <fullName>Affiliation_Type__c</fullName>
        <formula>IF(  TMN_Contact__r.RecordType.DeveloperName  = &apos;Mentor&apos;, &apos;Applicant&apos;, TEXT(TMN_Contact__r.Related_Party_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Home_City__c</fullName>
        <formula>IF(  TMN_Contact__r.RecordType.Name  = &apos;Mentor&apos;,TMN_Contact__r.City__c, Mentor__r.City__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPA Home City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Home_Zipcode__c</fullName>
        <formula>IF( TMN_Contact__r.RecordType.Name = &apos;Mentor&apos;, TMN_Contact__r.Zip_Code__c , Mentor__r.Zip_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPA Home Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conviction_Past_5_Years__c</fullName>
        <label>Has there been a conviction on charges o</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Current_CPS_Clearance_Request__c</fullName>
        <label>Current Child Protective Services cleara</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Current_CPS_Clearance_Results__c</fullName>
        <label>Date Current CPS Clearance Results</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fed_Crim_Background_Check_Request__c</fullName>
        <label>Federal Criminal Background Check Reques</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fed_Crim_Background_Check_Results__c</fullName>
        <label>Federal Criminal Background Check Result</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Foster_Home_Close__c</fullName>
        <formula>IF( TMN_Contact__r.RecordType.Name = &apos;Mentor&apos;,  TMN_Contact__r.Inactive_Date__c,  Mentor__r.Inactive_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foster Home Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Foster_Home_Initial_Approval__c</fullName>
        <label>Foster Home Initial approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Foster_Home_Most_Recent_Approval__c</fullName>
        <label>Foster Home most recent approval date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Fire_Safety__c</fullName>
        <label>Date Most Recent Fire Safety</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_HHSI__c</fullName>
        <label>Most Recent Home Health Safety Inspectio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Med_Eval__c</fullName>
        <label>Date of Most Recent Medical Evaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_State_Crim_Background_Check_Request__c</fullName>
        <label>State Criminal Background Check Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_State_Crim_Background_Check_Results__c</fullName>
        <label>State Criminal Background Check Results</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doc_of_Current_CPS_Clearance_in_File__c</fullName>
        <label>Documentation of current CPS clearance i</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_of_Fed_Crim_Background_Check_in_File__c</fullName>
        <label>Documentation of current Federal clearan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_of_Fire_Safety_in_File__c</fullName>
        <label>Documentation of Fire Safety Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_of_Home_Safety_Inspection_in_File__c</fullName>
        <label>Doc of Home Safety Inspection in File</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_of_Med_Eval_in_File__c</fullName>
        <label>Documentation of Medical Evaluation is i</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_of_State_Crim_Bckgrnd_Check_in_File__c</fullName>
        <label>Documentation of current State clearance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Conviction__c</fullName>
        <label>Is there a Federal conviction in the fol</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Foster_Family_Structure__c</fullName>
        <formula>IF( ISPICKVAL( TMN_Contact__r.Marital_Status__c, &apos;Married&apos;), &apos;Married Couple&apos;,
IF( ISPICKVAL( TMN_Contact__r.Marital_Status__c, &apos;Unmarried Couple&apos;), &apos;Unmarried Couple&apos;,
IF( ISPICKVAL( TMN_Contact__r.Gender__c, &apos;Female&apos; ), &apos;Single Female&apos;,
IF( ISPICKVAL( TMN_Contact__r.Gender__c, &apos;Male&apos; ), &apos;Single Male&apos;,
&apos;&apos; ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foster Family Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hispanic_Heritage__c</fullName>
        <label>Hispanic Heritage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_in_DHR_Report__c</fullName>
        <formula>IF( TMN_Contact__r.RecordType.Name = &apos;Mentor&apos;, 
IF(  OR(TMN_Contact__r.Active__c = true,  TMN_Contact__r.Suspended__c = true, AND( TMN_Contact__r.Inactive__c = true, (TODAY() -  TMN_Contact__r.Inactive_Date__c) &lt;= 30 )), &apos;Yes&apos;,&apos;No&apos;),
IF( AND(OR( Mentor__r.Active__c = true,  Mentor__r.Suspended__c = true,  AND(Mentor__r.Inactive__c = true,  (TODAY() - Mentor__r.Inactive_Date__c) &lt;= 30 )), TMN_Contact__r.No_Longer_In_Home__c = false), &apos;Yes&apos;, &apos;No&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in DHR Report?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Mentor Tracking Report Records</relationshipLabel>
        <relationshipName>Mentor_Tracking_Report_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Clearance__c</fullName>
        <label>Outcome of Clearance</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicated - Abuse and Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated - Abuse and Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Population_This_Home_Is_Associated_With__c</fullName>
        <formula>IF(  TMN_Contact__r.RecordType.Name = &apos;Mentor&apos;,  TEXT(TMN_Contact__r.Population_This_Home_Is_Associated_With__c),  TEXT(Mentor__r.Population_This_Home_Is_Associated_With__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Population This Home Is Associated With</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Race__c</fullName>
        <formula>TEXT(  TMN_Contact__r.DHR_CPA_Race_1__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Race__c</fullName>
        <formula>TEXT(  TMN_Contact__r.DHR_CPA_Race_2__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Race</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Conviction__c</fullName>
        <label>Is there a State conviction in the follo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_of_CPA_Home__c</fullName>
        <formula>IF( TMN_Contact__r.RecordType.Name = &apos;Mentor&apos;,  TMN_Contact__r.Street_1__c &amp; IF( TMN_Contact__r.Street_2__c!=&apos;&apos;, &apos;, &apos; &amp; TMN_Contact__r.Street_2__c, &apos;&apos;) , Mentor__r.Street_1__c  &amp;  IF(Mentor__r.Street_2__c!=&apos;&apos;, &apos;, &apos; &amp; Mentor__r.Street_2__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address of CPA Home</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMN_Contact__c</fullName>
        <label>TMN Contact</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Mentor Tracking Report Records (TMN Contact)</relationshipLabel>
        <relationshipName>Mentor_Tracking_Report_Records1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_of_Conviction_Federal__c</fullName>
        <label>Type of Conviction (Federal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mentor Tracking Report Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Foster_Family_Structure__c</columns>
        <columns>Hispanic_Heritage__c</columns>
        <columns>Mentor__c</columns>
        <columns>Date_Most_Recent_HHSI__c</columns>
        <columns>Street_Address_of_CPA_Home__c</columns>
        <columns>TMN_Contact__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mentor Tracking Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentor Tracking Report Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>